setinterval generates continuous stream of random shapes

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
   <div class="grid-wrapper">  
   </div>
   <p>Score: <span class="total">0</span></p>
+  <p>Use arrow keys to move left, right or down</p>
+  <p>Use space bar to rotate shape</p>
+  <button type="button">Start</button>
 </body>
 </html>
