score updates successfully with removal of row

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="grid-wrapper">  
   </div>
-  <p>Score: <span class="total">0</span></p>
+  <p>Score: <span class="score"></span></p>
   <p>Use arrow keys to move left, right or down</p>
   <p>Use space bar to rotate shape</p>
   <button type="button">Start</button>
