--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
   <div class="grid-wrapper">  
   </div>
-  <p>Score: <span class="score"></span></p>
-  <p>Use arrow keys to move left, right or down</p>
-  <p>Use space bar to rotate shape</p>
-  <button type="button">Start</button>
+  <aside>
+    <p>Score: <span class="score"></span></p>
+    <p>Use arrow keys to move left, right or down</p>
+    <p>Use space bar to rotate shape</p>
+    <button type="button">Start</button>
+  </aside>
 </body>
 </html>
