header font and grid colour change

--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/main.css">
   <script src="./scripts/app.js" charset="utf-8"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+
   <title>Document</title>
 </head>
 <body>
-  <div class="grid-wrapper">  
-  </div>
-  <aside>
-    <p>Score: <span class="score"></span></p>
-    <p>Use arrow keys to move left, right or down</p>
-    <p>Use space bar to rotate shape</p>
-    <button type="button">Start</button>
-  </aside>
+  <h1>Тетрис!</h1>
+  <main>
+    <div class="grid-wrapper">  
+    </div>
+    <aside>
+      <p>Score: <span class="score"></span></p>
+      <p>Use arrow keys to move left, right or down</p>
+      <p>Use space bar to rotate shape</p>
+      <button type="button">Start</button>
+    </aside>
+  </main> 
 </body>
 </html>
