add fonts, some colours and some layout for instructions

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="./styles/main.css">
   <script src="./scripts/app.js" charset="utf-8"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
-
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&family=Roboto+Slab:wght@900&family=Special+Elite&display=swap" rel="stylesheet">
+  
+  <title>Tetris</title>
 </head>
 <body>
   <h1>Тетрис!</h1>
@@ -17,7 +17,9 @@
     <div class="grid-wrapper">  
     </div>
     <aside>
-      <p>Score: <span class="score"></span></p>
+      <div class="scoreboard">
+        <p>Score: <span class="score"></span></p>
+      </div>
       <p>Use arrow keys to move left, right or down</p>
       <p>Use space bar to rotate shape</p>
       <button type="button">Start</button>
