button hover disables

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <p>Use arrow keys to move left, right or down</p>
       <p>Use space bar to rotate shape</p>
-      <button type="button">Start!</button>
+      <button type="button" class="button">Start</button>
     </aside>
   </main> 
 </body>
