arrow key symbols added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       <div class="scoreboard">
         <p>Score: <span class="score"></span></p>
       </div>
-      <p>Use arrow keys to move left, right or down</p>
-      <p>Use space bar to rotate shape</p>
+      <p>⬅️: Move left</p>
+      <p>➡️: Move right</p>
+      <p>⬇️: Move down</p>
+      <p>Use <span class="space">space bar</span> to rotate shape</p>
       <button type="button" class="button">Start</button>
     </aside>
   </main> 
