text shadow on h1 for extra soviet

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
   
   <title>Tetris</title>
 </head>
-<body>
-  <h1>Тетрис!</h1>
-  <main>
-    <div class="grid-wrapper">  
-    </div>
-    <aside>
-      <div class="scoreboard">
-        <p>Score: <span class="score"></span></p>
+<body class="container">
+    <h1>Тетрис!</h1>
+    <main>
+      <div class="grid-wrapper">  
       </div>
-      <p>⬅️: Move left</p>
-      <p>➡️: Move right</p>
-      <p>⬇️: Move down</p>
-      <p>Use <span class="space">space bar</span> to rotate shape</p>
-      <button type="button" class="button">Start</button>
-    </aside>
-  </main> 
+      <aside>
+        <div class="scoreboard">
+          <p>Score: <span class="score"></span></p>
+        </div>
+        <p>⬅️: Move left</p>
+        <p>➡️: Move right</p>
+        <p>⬇️: Move down</p>
+        <p>Use <span class="space">space bar</span> to rotate shape</p>
+        <button type="button" class="button">Start</button>
+      </aside>
+    </main> 
 </body>
 </html>
