reposition items in aside

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
       </div>
       <aside>
         <div class="scoreboard">
-          <p>Score: <span class="score"></span></p>
+          <p>SCORE: <span class="score"></span></p>
         </div>
-        <p>⬅️: Move left</p>
-        <p>➡️: Move right</p>
-        <p>⬇️: Move down</p>
-        <p>Use <span class="space">space bar</span> to rotate shape</p>
+        <div class="controls">
+          <p>⬅️ - Move left</p>
+          <p>➡️ - Move right</p>
+          <p>⬇️ - Move down</p>
+        <p><span class="space">space</span> - Rotate shape</p>
+        </div>
         <button type="button" class="button">Start</button>
       </aside>
     </main> 
