window prompt alternative renders

--- a/index.html
+++ b/index.html
@@ -29,5 +29,10 @@
         <button type="button" class="button">Start</button>
       </aside>
     </main> 
+    <div class="done">
+      <p class="loser">YOU LOSE!</p>
+      <p>I guess you need more practice.</p>
+      <button type="button">Again!</button>
+    </div>
 </body>
 </html>
