reset button works

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="done">
       <p class="loser">YOU LOSE!</p>
       <p>I guess you need more practice.</p>
-      <button type="button">Again!</button>
+      <button type="button" class="again">Again!</button>
     </div>
 </body>
 </html>
