having issues with storing high score

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <aside>
         <div class="scoreboard">
           <p>SCORE: <span class="score"></span></p>
+          <p class="hs-tag">HIGH SCORE: <span class="high-score"></span></p>
         </div>
         <div class="controls">
           <p>⬅️ - Move left</p>
