have beginnings of grain filter

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
       <p>I guess you need more practice.</p>
       <button type="button" class="again">Again!</button>
     </div>
+    <div class="filter"></div>
 </body>
 </html>
