found ingredients for grain filternow just need to figure out how to animate

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
       <button type="button" class="again">Again!</button>
     </div>
     <div class="filter"></div>
+    <div class="filter-under"></div>
 </body>
 </html>
