sound effect for losing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Tetris</title>
 </head>
 <body class="container">
+  <audio src=''></audio>
     <h1>Тетрис!</h1>
     <main>
       <div class="grid-wrapper">  
