beginning of title page

--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
     </div>
     <div class="filter"></div>
     <div class="filter-under"></div>
+    <div class="intro">
+      <p class="intro-number">5</p>
+    </div>
 </body>
 </html>
