--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
           <p>➡️ - Move right</p>
           <p>⬇️ - Move down</p>
         <p><span class="space">space</span> - Rotate shape</p>
-        </div>
         <button type="button" class="button">Start</button>
+        </div>
+        
       </aside>
     </main> 
     <div class="done">
@@ -39,7 +40,7 @@
     <div class="filter"></div>
     <div class="filter-under"></div>
     <div class="intro">
-      <p class="intro-number">10</p>
+      <p class="intro-number"></p>
     </div>
 </body>
 </html>
