h1 and title change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="container">
   <audio src=''></audio>
-    <h1>Тетрис!</h1>
+    <h1>Tetris</h1>
     <main>
       <div class="grid-wrapper">  
       </div>
